# quarksql

./: CMakeLists.txt  CMakeLists_boost169.txt  README.md  index.html  install.sh  quarksql.sh  schemas.json
include/: DBManager.h  IndexManager.h  JsonUtils.h  JwtUtils.h  LLM.h  Query.h  QueryExecutor.h  RequirementsWatcher.h  SchemaManager.h  SqlParser.h  authmiddleware.h  llm_mistral.h  query.h
libs/thirdparties/: libboost_system.so.1.69.0
public/: app.js  index.html  readme.html  styles.css
public/acct/: app.js  index.html  style.css
public/blockchain/: app.js  index.html  style.css
public/mistral/: ask.html
public/voice/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
public/voiceaccounting/: app.js  index.html
quarks_db/: 000009.sst  IDENTITY  LOG  LOG.old.1755168141543815  LOG.old.1755168260442670  LOG.old.1755168335504988  LOG.old.1755168403033345  LOG.old.1755168416769729  LOG.old.1755168482516403  LOG.old.1755168532662017  LOG.old.1755168685245217  LOG.old.1755168793087546  LOG.old.1755168841672721  LOG.old.1755169111559354  LOG.old.1755169378071135  LOG.old.1755169665412626  LOG.old.1755170188750635  LOG.old.1755170490533288  MANIFEST-000051  OPTIONS-000054  OPTIONS-000056
requirements/: README.md  agent.md
scripts/: auth.js  business.js  sanitize.js
scripts/blockchain/: api.js  ledger.js
src/: DBManager.cpp  IndexManager.cpp  JsonUtils.cpp  JwtUtils.cpp  QueryExecutor.cpp  RequirementsWatcher.cpp  SchemaManager.cpp  SqlParser.cpp  WatcherBootstrap.cpp  llm_mistral.cpp  main.cpp
